# yokai

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/yokai/: arena.h  ast.h  lexer.h  repl.h  str.h  token.h
src/: arena.c  ast.c  lexer.c  main.c  repl.c  str.c  token.c
tests/: arena_test.c  ast_test.c  main.c  test.h  test_registry.h  token_test.c
